# Liki4TeloxideBot

./: .env.example  Cargo.toml  Dockerfile  README.md  rustfmt.toml  teloxide_bot.yaml
.github/workflows/: packing.yml
src/: main.rs
src/bot/: mod.rs
src/bot/handler/: command.rs  endpoint.rs
src/bot/util/: mapping.rs  mod.rs
src/meme/: cmd.rs  mod.rs  utils.rs
src/meme/generator/: error.rs  interface.rs  mod.rs  types.rs
src/meme/generator/api/: client.rs  generate.rs  info.rs  list.rs  mod.rs  preview.rs
src/meme/generator/local/: client.rs  generate.rs  info.rs  list.rs  preview.rs
