[package]
name = "liki4_teloxide_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.13", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
meme_generator = "0.2.0-beta.6"
infer = "0.16.0"
base64 = "0.22.1"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
serde_json = "1.0"
lazy_static = "1.5.0"
async-trait = "0.1.85"
rand = "0.9.0"
futures = "0.3.31"
